[package]
name = "rocket-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
sqlx = { version = "0.5", features = [  "runtime-async-std-native-tls", "mysql", "mssql", "postgres" ] }
async-std = { version = "1", features = [ "attributes" ] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_derive = "*"
serde_json = "*"